[package]
name         = "signal-http"
version      = "0.1.0"
authors      = ["ffminus <ffminus@protonmail.com>"]
edition      = "2024"
rust-version = "1.86"
description  = "Bidirectional HTTP bridge to Signal daemon."
readme       = "README.md"
repository   = "https://github.com/ffminus/signal-http"
license      = "MIT"
keywords     = ["asynchronous", "communication"]
categories   = ["async", "communication", "web"]

[dependencies]

[lints.clippy]
cargo    = "warn"
nursery  = "warn"
pedantic = "warn"

multiple_crate_versions = { level = "allow", priority = 1 }
option_if_let_else      = { level = "allow", priority = 1 }

[lints.rust]
unsafe_code       = "forbid"
unstable_features = "forbid"
