[package]
name         = "signal-http"
version      = "0.1.0"
authors      = ["ffminus <ffminus@protonmail.com>"]
edition      = "2024"
rust-version = "1.86"
description  = "Bidirectional HTTP bridge to Signal daemon."
readme       = "README.md"
repository   = "https://github.com/ffminus/signal-http"
license      = "MIT"
keywords     = ["asynchronous", "communication"]
categories   = ["async", "communication", "web"]

[dependencies]
color-eyre = { version = "0.6.4", default-features = false } # Application error handling

clap  = { version = "4.5" , features = ["derive"] }          # Argument parser
tokio = { version = "1.44", features = ["rt-multi-thread"] } # Async runtime

# Logging consumer
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt"] }  

[lints.clippy]
cargo    = "warn"
nursery  = "warn"
pedantic = "warn"

multiple_crate_versions = { level = "allow", priority = 1 }
option_if_let_else      = { level = "allow", priority = 1 }

[lints.rust]
unsafe_code       = "forbid"
unstable_features = "forbid"
