[package]
name         = "signal-http"
version      = "0.2.0"
authors      = ["ffminus <ffminus@protonmail.com>"]
edition      = "2024"
rust-version = "1.86"
description  = "Bidirectional HTTP bridge to Signal daemon."
readme       = "README.md"
repository   = "https://github.com/ffminus/signal-http"
license      = "MIT"
keywords     = ["asynchronous", "communication"]
categories   = ["async", "communication", "web"]

[dependencies]
base64     = "0.22.1" # Base64 encoding
serde_json = "1.0"    # JSON serialization

color-eyre   = { version = "0.6.4" , default-features = false } # Application error handling
futures-util = { version = "0.3.31", default-features = false } # Stream trait
tracing      = { version = "0.1.41", default-features = false } # Logs and traces

clap         = { version = "4.5"   , features = ["derive"] }          # Argument parser
poem         = { version = "3.1"   , features = ["compression"] }     # HTTP server
poem-openapi = { version = "5.1"   , features = ["swagger-ui"] }      # OpenAPI documentation
serde        = { version = "1.0"   , features = ["derive"] }          # Serialization framework
tokio        = { version = "1.44"  , features = ["rt-multi-thread"] } # Async runtime
tokio-util   = { version = "0.7.15", features = ["codec", "net"] }    # Codecs and bytes

# JSON-RPC
jsonrpsee = { version = "0.25.1", default-features = false, features = ["async-client", "macros", "ws-client"] }

# HTTP client
reqwest = { version = "0.12.15", default-features = false, features = ["json"] }

# Logging consumer
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt"] }

[lints.clippy]
cargo    = "warn"
nursery  = "warn"
pedantic = "warn"

multiple_crate_versions = { level = "allow", priority = 1 }
option_if_let_else      = { level = "allow", priority = 1 }

[lints.rust]
unsafe_code       = "forbid"
unstable_features = "forbid"
